# post-ccache-distcc

./: .gitignore  README.md  Vagrantfile  playbook.yml
roles/buildserver/tasks/: main.yml
roles/buildserver/templates/: bashrc  cmdlist.txt
roles/client/tasks/: main.yml
roles/common/tasks/: main.yml
src/: CMakeLists.txt  build-local.sh  build-remote.sh  main.cpp
src/greetlib/: CMakeLists.txt  greet.cpp  greet.hpp
